k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-service
  labels:
    app: stock-service
spec:
  selector:
    app: stock-service
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
